tests/ui/treat-err-as-bug/err.stderr
error: internal compiler error[E0080]: attempt to compute `0_u32 - 1_u32`, which would overflow
  --> $DIR/err.rs:9:21
   |
LL | pub static C: u32 = 0 - 1;
   |                     ^^^^^ evaluation of `C` failed here


error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
#0 [eval_static_initializer] evaluating initializer of static `C`
#1 [analysis] running analysis passes on this crate
end of query stack
